--- a/src/Tests/ViewFaceCore.IISWebApp.Test/packages.config
+++ b/src/Tests/ViewFaceCore.IISWebApp.Test/packages.config
@@ -20,5 +20,21 @@
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="ViewFaceCore.all_models" version="6.0.5" targetFramework="net472" />
+  <package id="ViewFaceCore.model.age_predictor" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.eye_state" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_detector" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_landmarker_mask_pts5" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_landmarker_pts5" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_landmarker_pts68" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_recognizer" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_recognizer_light" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.face_recognizer_mask" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.fas_first" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.fas_second" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.gender_predictor" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.mask_detector" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.pose_estimation" version="6.0.4" targetFramework="net472" />
+  <package id="ViewFaceCore.model.quality_lbn" version="6.0.4" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
