--- a/src/Tests/ViewFaceCore.IISWebApp.Test/ViewFaceCore.IISWebApp.Test.csproj
+++ b/src/Tests/ViewFaceCore.IISWebApp.Test/ViewFaceCore.IISWebApp.Test.csproj
@@ -141,6 +141,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ViewFaceCoreService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
