添加口罩识别

--- a/src/Tests/ConsoleApp1/ConsoleApp1.csproj
+++ b/src/Tests/ConsoleApp1/ConsoleApp1.csproj
@@ -25,6 +25,9 @@
 		<None Update="images\Jay_4.jpg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="images\mask_01.jpeg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Update="nlog.config">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
