--- a/src/Tests/ViewFaceCoreSkiaSharpTest/ViewFaceCoreSkiaSharpTest.csproj
+++ b/src/Tests/ViewFaceCoreSkiaSharpTest/ViewFaceCoreSkiaSharpTest.csproj
@@ -32,6 +32,9 @@
 		<None Update="images\Jay_4.jpg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="images\mask_01.jpeg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 </Project>
