--- a/src/Simples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Demo.WebApp.csproj
+++ b/src/Simples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Demo.WebApp.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.Host\ViewFaceCore.Extension.Host.csproj" />
+	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.Host\ViewFaceCore.Extension.DependencyInjection.csproj" />
 	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.SkiaSharp\ViewFaceCore.Extension.SkiaSharp.csproj" />
 	  <ProjectReference Include="..\..\Runtimes\ViewFaceCore.runtime.win.x64\ViewFaceCore.runtime.win.x64.csproj" />
 	  <ProjectReference Include="..\..\ViewFaceCore\ViewFaceCore.csproj" />
