--- a/src/Simples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Demo.WebApp.csproj
+++ b/src/Simples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Demo.WebApp.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.DependencyInjection\ViewFaceCore.Extension.DependencyInjection.csproj" />
 	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.SkiaSharp\ViewFaceCore.Extension.SkiaSharp.csproj" />
 	  <ProjectReference Include="..\..\Runtimes\ViewFaceCore.runtime.win.x64\ViewFaceCore.runtime.win.x64.csproj" />
 	  <ProjectReference Include="..\..\ViewFaceCore\ViewFaceCore.csproj" />
