--- a/src/Runtimes/ViewFaceCore.runtime.ubuntu.20.04.x64/ViewFaceCore.runtime.ubuntu.20.04.x64.csproj
+++ b/src/Runtimes/ViewFaceCore.runtime.ubuntu.20.04.x64/ViewFaceCore.runtime.ubuntu.20.04.x64.csproj
@@ -6,7 +6,7 @@
 
 	<!--项目引用方式-->
 	<ItemGroup>
-		<None Include="..\..\Bridges\Linux\ViewFaceBridge\bin\Release\x64\libViewFaceBridge.so" Link="viewfacecore\linux\x64\libViewFaceBridge.so" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\Bridges\Linux\ViewFaceBridge\bin\$(Configuration)\x64\libViewFaceBridge.so" Link="viewfacecore\linux\x64\libViewFaceBridge.so" CopyToOutputDirectory="PreserveNewest" />
 
 		<None Include="..\..\SeetaFace\index\build\lib64\libtennis.so" Link="viewfacecore\linux\x64\libtennis.so" CopyToOutputDirectory="PreserveNewest" />
 		<None Include="..\..\SeetaFace\index\build\lib64\libtennis_haswell.so" Link="viewfacecore\linux\x64\libtennis_haswell.so" CopyToOutputDirectory="PreserveNewest" />
