--- a/src/Simples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Demo.WebApp.csproj
+++ b/src/Simples/ViewFaceCore.Demo.WebApp/ViewFaceCore.Demo.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -7,19 +7,19 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ViewFaceCore.all_models" Version="6.0.5" />
-		<!--<PackageReference Include="ViewFaceCore.runtime.linux.arm" Version="6.0.2" />
-		<PackageReference Include="ViewFaceCore.runtime.linux.arm64" Version="6.0.2" />
-		<PackageReference Include="ViewFaceCore.runtime.ubuntu.20.04.x64" Version="6.0.2" />
-		<PackageReference Include="ViewFaceCore.runtime.win.x64" Version="6.0.2" />
-		<PackageReference Include="ViewFaceCore.runtime.win.x86" Version="6.0.2" />-->
+		<PackageReference Include="ViewFaceCore" Version="0.3.7" />
+		<PackageReference Include="ViewFaceCore.all_models" Version="6.0.7" />
+		<PackageReference Include="ViewFaceCore.Extension.SkiaSharp" Version="0.3.7" />
+		<PackageReference Include="ViewFaceCore.runtime.linux.arm" Version="6.0.7" />
+		<PackageReference Include="ViewFaceCore.runtime.linux.arm64" Version="6.0.7" />
+		<PackageReference Include="ViewFaceCore.runtime.ubuntu.20.04.x64" Version="6.0.7" />
+		<PackageReference Include="ViewFaceCore.runtime.win.vc" Version="6.0.0" />
+		<PackageReference Include="ViewFaceCore.runtime.win.x64" Version="6.0.7" />
+		<PackageReference Include="ViewFaceCore.runtime.win.x86" Version="6.0.7" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.DependencyInjection\ViewFaceCore.Extension.DependencyInjection.csproj" />
-	  <ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.SkiaSharp\ViewFaceCore.Extension.SkiaSharp.csproj" />
-	  <ProjectReference Include="..\..\Runtimes\ViewFaceCore.runtime.win.x64\ViewFaceCore.runtime.win.x64.csproj" />
-	  <ProjectReference Include="..\..\ViewFaceCore\ViewFaceCore.csproj" />
 	</ItemGroup>
 
 </Project>
